material-addon/src/main/webapp/VAADIN/themes/material/components/v-grid.scss
body:not(.v-touch) .v-grid-editor-save:hover,
body:not(.v-touch) .v-grid-editor-cancel:hover {
  background: rgba($v-focus-color, 0.2) !important;
}

body.v-ie .v-grid-scroller {
  z-index: 6 !important;
}

body.v-webkit .v-grid-scroller::-webkit-scrollbar-thumb {
  border-radius: 0 !important;
  border: 0px solid transparent !important;
  background: $mat-scroll-bar-color !important;
}

body.v-webkit .v-grid-scroller-vertical {
  padding-right: 4px !important;
  margin-top: 1px;
  border: 2px solid transparent !important;
}

body.v-webkit .v-grid-scroller-horizontal {
  padding-bottom: 5px !important;
  border: 0px solid transparent !important;
  bottom: 2px;
}

body.v-gecko .v-grid-scroller.v-grid-scroller-horizontal > div {
  margin: 0 -17px !important;
}

@mixin v-grid {
  .v-grid:not(.borderless) {
    @extend .floating-border;
  }
  .v-grid.borderless {
    overflow: hidden;
  }
  .v-grid-row-selected > .v-grid-cell {
    color: inherit;
    border-top: 1px solid $v-table-border-color;
  }
  .v-grid-row-stripe > td {
    background-color: $mat-card-color;
  }
  .v-grid-column-header-content {
    color: valo-font-color($mat-card-color, 0.6);
  }
  .v-grid-body .v-grid-row:not(:first-child) {
    border-top: 1px solid $v-table-border-color;
  }
  .v-grid-row-selected > .v-grid-cell {
    border-top: none;
  }
  .v-grid-scroller.v-grid-scroller-horizontal {
    overflow-x: auto !important;
  }
  .v-grid-cell {
    height: $v-unit-size--large;
    line-height: $v-unit-size--large;
    background-color: $mat-card-color !important;
    padding: 0 round($v-unit-size/2);
  }
  .v-grid-column-header-content,
  .v-grid-column-footer-content {
    line-height: $v-unit-size--large;
  }
  .v-grid-cell.frozen {
    box-shadow: none;
  }
  .v-grid-scroller.v-grid-scroller-horizontal > div {
    margin: 0 -12px;
  }
  .v-grid-tablewrapper {
    overflow: visible;
    position: unset;
    width: 100% !important;
  }
  .v-grid-header {
    width: auto;
  }
  .v-grid:not(.borderless) .v-grid-header::after {
    width: 100%;
    position: absolute;
    height: $v-unit-size--large;
    left: 0px;
    top: 0px;
    z-index: -1;
    content: "";
    background: $mat-card-color;
    @extend .z-depth-0-5;
  }
  .last-frozen {
    border-right: 1px solid $v-table-border-color !important;
  }
  .v-grid-editor {
    @extend .floating-border;
    @extend .z-depth-2;
    background-color: $mat-card-color;
  }
  .v-grid-editor * .gwt-CheckBox:after {
    position: absolute;
    content: "...";
    text-align: center;
    top: 0px;
    left: 0px;
    line-height: $v-unit-size--large;
    width: 60px;
  }
  .v-grid-editor * .gwt-CheckBox > input {
    display: none;
  }
  .v-grid-editor-save,
  .v-grid-editor-cancel {
    height: $v-unit-size--small;
    color: $v-focus-color;
    transition: box-shadow .3s ease-out, background .3s;
    padding: 0 20px;
    border-radius: $v-border-radius;
  }
  .v-grid-cell-focused,
  .v-grid-row-selected .v-grid-cell {
    position: relative;
    border-color: transparent;
    z-index: 0;
  }
  .v-grid-cell-focused:before,
  .v-grid-row-selected .v-grid-cell:before {
    border: 1px solid transparent !important;
    background-color: $v-table-row-selected-color !important;
    z-index: -1;
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    pointer-events: none;
  }
  .v-grid-row-selected .v-grid-cell:before {
    display: block;
  }
  .v-grid-cell.frozen {
    z-index: 1;
  }
  .v-grid-editor-footer {
    height: $v-unit-size + 2px;
    font-size: 15px;
    margin-left: 10px;
    background-color: $mat-card-color;
  }
  $label-width: $v-unit-size/2 - 4px;
  $label-top-margin: $v-unit-size / 4;
  .v-grid-select-all-checkbox, .v-grid-selection-checkbox {
    width: $label-width;
    position: relative;
    margin: $label-width auto;
    label {
      width: $label-width;
      height: $label-width;
      cursor: pointer;
      position: absolute;
      top: calc(50% - $label-top-margin);
      left: 0;
      border-radius: $v-border-radius;
      border: 2px solid valo-font-color($v-background-color, 0.65);
      transition: background 0.1s ease, border 0.1s ease;
      color: transparent !important;
      &:after {
        content: '';
        width: $v-unit-size * 0.175;
        height: $v-unit-size * 0.075;
        position: absolute;
        top: $v-unit-size * 0.22 - 4.8px; // 40 ->  4; 55 -> 7.3
        left: $v-unit-size * 0.15 - 3.13px; // 40 -> 3; 55 -> 5.3
        border: 3px solid white;
        border-top: none;
        border-right: none;
        background: transparent;
        opacity: 0;
        transform: rotate(-45deg);
      }
    }
    input[type="checkbox"] {
      opacity: 0;
      width: $label-width;
      &:checked + label:after {
        opacity: 1;
      }
      &:checked + label {
        background: $v-selection-color;
        border-color: $v-selection-color;
      }
    }
  }
  .v-grid-scroller, .v-grid-horizontal-scrollbar-deco {
    background: transparent !important;
  }
  :not(.v-grid-header) > .v-grid-row:last-child {
    border-bottom: 1px solid $v-table-border-color;
  }
  .v-grid-horizontal-scrollbar-deco:after {
    position: absolute;
    bottom: -10px;
    z-index: 5;
    right: -1px;
    height: 10px;
    content: "";
    width: 1px;
    background: $v-table-border-color;
  }
}

